# cctr

./: .#README.md  .gitattributes  .gitignore  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  install.sh  release-plz.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml  update-homebrew.yml
.veta/: db.sqlite
.veta/notes/: 1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
corpus/basic/: default_settings.txt  echo.txt
corpus/cctr/: failures.txt  list.txt  run.txt
corpus/exit_only/: exit_only.txt
corpus/expressions/: expressions.txt
corpus/fixtures/: fixtures.txt
corpus/list_mode/: list.txt
corpus/no_fixture/: simple.txt
corpus/setup_teardown/: setup_teardown.txt
corpus/template_expansion/: template_in_expected.txt
corpus/update_mode/: update_mode.txt
corpus/variables/: variables.txt
corpus/verbose/: verbose.txt
corpus/with_fixture/: read.txt
crates/cctr/: CHANGELOG.md  Cargo.toml  build.rs
crates/cctr-corpus/: CHANGELOG.md  Cargo.toml
crates/cctr-expr/: CHANGELOG.md  Cargo.toml
crates/cctr-match/: Cargo.toml
crates/cctr/src/: cli.rs  discover.rs  error.rs  lib.rs  main.rs  matcher.rs  output.rs  parse.rs  runner.rs  template.rs  update.rs
crates/patmatch/: Cargo.toml
script/: install  test
skill/cctr/: SKILL.md
src/: cli.rs  discover.rs  expr.rs  lib.rs  main.rs  matcher.rs  output.rs  parse.rs  runner.rs  template.rs  update.rs
test/ansi_stripping/: ansi_stripping.txt
test/basic/: default_settings.txt  echo.txt  variables.txt
test/cctr/: failures.txt  list.txt  multiline_commands.txt  run.txt
test/delimiters/: delimiters.txt
test/duck_typing/: duck_typing.txt
test/env_function/: env_function.txt
test/env_vars/: env_vars.txt
test/exit_directive/: exit_directive.txt
test/exit_only/: exit_only.txt
test/expressions/: expressions.txt
test/fixtures/: fixtures.txt
(+171 files in other folders)
