[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Andreas Jansson"]
license = "MIT"

[workspace.dependencies]
cctr-expr = { path = "crates/cctr-expr" }
cctr-corpus = { path = "crates/cctr-corpus" }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
