[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.30.0"
edition = "2021"
authors = ["Andreas Jansson"]
license = "MIT"
homepage = "https://github.com/andreasjansson/cctr"
repository = "https://github.com/andreasjansson/cctr"

[workspace.dependencies]
cctr-expr = { version = "0.30.0", path = "crates/cctr-expr" }
cctr-corpus = { version = "0.30.0", path = "crates/cctr-corpus" }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
